syntax = "proto3";

                 package gameEventPrerequisite;
service GameEventPrerequisiteService {
 rpc createGameEventPrerequisite (GameEventPrerequisiteCreateInput) returns (GameEventPrerequisite) {}
rpc gameEventPrerequisites (findManyParams) returns (stream GameEventPrerequisite) {}
rpc gameEventPrerequisite (GameEventPrerequisiteWhereUniqueInput) returns (GameEventPrerequisite) {}
rpc updateGameEventPrerequisite (GameEventPrerequisiteUpdateInput) returns (GameEventPrerequisite) {}
rpc deleteGameEventPrerequisite (GameEventPrerequisiteWhereUniqueInput) returns (GameEventPrerequisite) {} 
 }
message GameEventPrerequisiteCreateInput {
string createdAt = 1;
int32 eventEntry = 2;
string id = 3;
int32 prerequisiteEvent = 4;
string updatedAt = 5;
};
message GameEventPrerequisite {
string createdAt = 1;
int32 eventEntry = 2;
string id = 3;
int32 prerequisiteEvent = 4;
string updatedAt = 5;
};
message GameEventPrerequisiteWhereUniqueInput {
string createdAt = 1;
int32 eventEntry = 2;
string id = 3;
int32 prerequisiteEvent = 4;
string updatedAt = 5;
};
message GameEventPrerequisiteUpdateInput {
string createdAt = 1;
int32 eventEntry = 2;
string id = 3;
int32 prerequisiteEvent = 4;
string updatedAt = 5;
};
message findManyParams {

};